fix: make dark mode btn clickable

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,7 @@ a:hover {
   .header {
     display: block;
     margin-top: -1.2em;
+    width: 50%;
   }
 
   h1 {
